WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
224189
[iOS] Prevent background blur when presenting date/time pickers
https://bugs.webkit.org/show_bug.cgi?id=224189
Summary
[iOS] Prevent background blur when presenting date/time pickers
Aditya Keerthi
Reported
2021-04-05 09:38:05 PDT
...
Attachments
Patch
(2.06 KB, patch)
2021-04-05 09:39 PDT
,
Aditya Keerthi
wenson_hsieh
: review+
wenson_hsieh
: commit-queue-
Details
Formatted Diff
Diff
Patch for landing
(2.72 KB, patch)
2021-04-05 12:08 PDT
,
Aditya Keerthi
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Aditya Keerthi
Comment 1
2021-04-05 09:38:18 PDT
<
rdar://problem/76220352
>
Aditya Keerthi
Comment 2
2021-04-05 09:39:35 PDT
Created
attachment 425159
[details]
Patch
Aditya Keerthi
Comment 3
2021-04-05 09:42:08 PDT
Thanks for the review! Will commit once the tree is open.
Aakash Jain
Comment 4
2021-04-05 12:00:23 PDT
Comment on
attachment 425159
[details]
Patch From
https://ews-build.webkit.org/#/builders/53/builds/11856
: WKDateTimeInputControl.mm:162:11: error: property 'preferredBackgroundEffects' not found on object of type '_UIContextMenuStyle *'
Wenson Hsieh
Comment 5
2021-04-05 12:02:49 PDT
Comment on
attachment 425159
[details]
Patch Restoring the r+ (and adding cq- instead). The build fix here is straightforward (we probably just need to update UIKitSPI.h)
Aditya Keerthi
Comment 6
2021-04-05 12:08:39 PDT
Created
attachment 425184
[details]
Patch for landing
Aakash Jain
Comment 7
2021-04-05 12:26:53 PDT
I did the r- so that rest of EWS bots do not process that patch (since they have backlog of patches to process currently). Since there is a new patch uploaded, we can also mark the older patch as obsolete, so that all the EWS queue do not need to process that patch. EWS skips r- and obsolete patches.
Wenson Hsieh
Comment 8
2021-04-05 12:28:42 PDT
Comment on
attachment 425159
[details]
Patch (In reply to Aakash Jain from
comment #7
)
> I did the r- so that rest of EWS bots do not process that patch (since they > have backlog of patches to process currently). Since there is a new patch > uploaded, we can also mark the older patch as obsolete, so that all the EWS > queue do not need to process that patch. > > EWS skips r- and obsolete patches.
I see. In that case, we could mark the patch as obsolete.
EWS
Comment 9
2021-04-06 10:54:15 PDT
Committed
r275532
: <
https://commits.webkit.org/r275532
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 425184
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug